--- a/components/input/styles.module.css
+++ b/components/input/styles.module.css
@@ -1,6 +1,7 @@
 .input_wrapper {
   height: var(--input-height);
   border-top: 2px solid #f8f8f8;
+  position: relative;
 }
 
 .input_wrapper form {
@@ -14,10 +15,21 @@
   border: none;
   background-color: transparent;
   font-size: 16px;
-  padding: 0 24px;
+  padding: 0 24px 0 42px;
   font-family: "Fira Code", monospace;
 }
 
 .input_wrapper input:focus {
   outline: none;
+}
+
+.input_wrapper::before {
+  content: "> ";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 24px;
+  margin: auto;
+  display: flex;
+  align-items: center;
 }
